tryinge, typeorm, migrations, model e docs
