# src/modules/cars/useCases/listSpecifications/ListSpecificationsController.ts
@@ -1,12 +1,14 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import ListSpecificationUseCase from "./ListSpecificationUseCase";
 
 export default class ListSpecificationsController {
-  constructor(private listSpecificationUseCase: ListSpecificationUseCase) {}
-
-  public handle(request: Request, response: Response): Response {
-    const specifications = this.listSpecificationUseCase.execute();
+  public async handle(request: Request, response: Response): Promise<Response> {
+    const listSpecificationUseCase = container.resolve(
+      ListSpecificationUseCase
+    );
+    const specifications = await listSpecificationUseCase.execute();
 
     return response.json(specifications);
   }
